--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         </li>
                      </ul>
                      <span class="navbar-text">
-                        <a class="nav-link alert-primary px-3 btn-lets-talk" href="index.html#">
+                        <a class="nav-link alert-primary px-3 btn-lets-talk" href="mailto:growstartechnology@gmail.com">
                            <span class="text-blue">Let's Talk</span>
                         </a>
                      </span>
@@ -70,7 +70,7 @@
                         untuk membantu anda dalam membuat <br />
                         website maupun desain produk
                      </p>
-                     <button class="shadow btn-explore bg-blue text-white px-4 py-3 fw-bold mt-2 mb-3" id="btn-explore">Jelajahi lebih lanjut</button>
+                     <button type="button" class="shadow btn-explore bg-blue text-white px-4 py-3 fw-bold mt-2 mb-3" id="btn-explore">Jelajahi lebih lanjut</button>
                   </div>
                   <div class="col-lg-6">
                      <img src="assets/images/image-header.png" class="img-fluid img-right" id="img-header" />
@@ -91,8 +91,8 @@
                      <div class="card">
                         <div class="card-body sr-start" id="card-services">
                            <center><img class="img-fluid pt-3 ps-3" src="assets/images/svg/icon-ui.svg" /></center>
-                           <h5 class="card-title title-icon-services pt-3 px-3">UI / UX</h5>
-                           <p class="card-text subtitle-icon-services px-3 pb-5">Dengan menggunakan pelayanan UI/UX dari Growstar Tech akan memudahkan anda dalam pengembangan web maupun aplikasi.</p>
+                           <h5 class="text-center card-title title-icon-services pt-3 px-3">UI / UX</h5>
+                           <p class="text-center card-text subtitle-icon-services px-3 pb-5">Dengan menggunakan pelayanan UI/UX dari Growstar Tech akan memudahkan anda dalam pengembangan web maupun aplikasi.</p>
                         </div>
                      </div>
                   </div>
@@ -100,8 +100,8 @@
                      <div class="card">
                         <div class="card-body" id="card-services">
                            <center><img class="img-fluid pt-3 ps-3" src="assets/images/svg/icon-desain.svg" /></center>
-                           <h5 class="card-title title-icon-services pt-3 px-3">Desain</h5>
-                           <p class="card-text subtitle-icon-services px-3 pb-5">Dengan menggunakan pelayanan Desain dari Growstar Tech yang tentunya akan membuat design anda semakin menarik dan bernilai.</p>
+                           <h5 class="text-center card-title title-icon-services pt-3 px-3">Desain</h5>
+                           <p class="text-center card-text subtitle-icon-services px-3 pb-5">Dengan menggunakan pelayanan Desain dari Growstar Tech yang tentunya akan membuat design anda semakin menarik dan bernilai.</p>
                         </div>
                      </div>
                   </div>
@@ -109,8 +109,8 @@
                      <div class="card">
                         <div class="card-body sr-end" id="card-services">
                            <center><img class="img-fluid pt-3 ps-3" src="assets/images/svg/icon-dev.svg" /></center>
-                           <h5 class="card-title title-icon-services pt-3 px-3">Web & Apps</h5>
-                           <p class="card-text subtitle-icon-services px-3 pb-5">Dengan menggunakan pelayanan dari Growstar Tech akan memudahkan anda dalam pengembangan web maupun aplikasi yang diinginkan.</p>
+                           <h5 class="text-center card-title title-icon-services pt-3 px-3">Web & Apps</h5>
+                           <p class="text-center card-text subtitle-icon-services px-3 pb-5">Dengan menggunakan pelayanan dari Growstar Tech akan memudahkan anda dalam pengembangan web maupun aplikasi yang diinginkan.</p>
                         </div>
                      </div>
                   </div>
@@ -183,7 +183,8 @@
                      </div>
                   </div>
                   <center>
-                     <button class="btn-outline-blue px-5 py-2 mt-4">Jelajahi lebih lanjut <i class="fas fa-angle-right"></i></button>
+                     <!-- <a href="#" class="btn-outline-blue px-5 py-2 mt-4 text-decoration-none">Jelajahi lebih lanjut <i class="fas fa-angle-right"></i></a> -->
+                     <button type="button" class="btn-outline-blue px-5 py-2 mt-4">Jelajahi lebih lanjut <i class="fas fa-angle-right"></i></button>
                   </center>
                </div>
             </div>
@@ -282,7 +283,7 @@
                         </div>
                         <div class="card-footer bg-transparent">
                            <center>
-                              <a class="" href=""><img src="assets/images/btn-blog.png" class="w-15 btn-blog" /></a>
+                              <a href=""><img src="assets/images/btn-blog.png" class="w-15 btn-blog" /></a>
                            </center>
                         </div>
                      </div>
@@ -296,7 +297,7 @@
                         </div>
                         <div class="card-footer bg-transparent">
                            <center>
-                              <a class="" href=""><img src="assets/images/btn-blog.png" class="w-15 btn-blog" /></a>
+                              <a href=""><img src="assets/images/btn-blog.png" class="w-15 btn-blog" /></a>
                            </center>
                         </div>
                      </div>
@@ -310,7 +311,7 @@
                         </div>
                         <div class="card-footer bg-transparent">
                            <center>
-                              <a class="" href=""><img src="assets/images/btn-blog.png" class="w-15 btn-blog" /></a>
+                              <a href=""><img src="assets/images/btn-blog.png" class="w-15 btn-blog" /></a>
                            </center>
                         </div>
                      </div>
