media query (repaired)

--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
             </div>
         </section>
 
-        <br /><br /><br>
+        <br /><br /><br />
 
         <!-- Tentang -->
         <section id="tentang">
@@ -455,33 +455,81 @@
             <hr class="text-white mt-3" size="5px" />
             <div class="container-fluid mt-3">
                 <div class="row">
-                    <div class="col-lg-3 text-center pb-5">
-                        <a href="index.html#navbar"><img src="assets/images/svg/GrowStar.svg" class="img-fluid w-50 img-footer" /></a>
+                    <div class="col-lg-2 text-center box-img-footer">
+                        <a href="index.html#navbar"><img src="assets/images/svg/GrowStar.svg" class="img-fluid img-footer" /></a>
                     </div>
-                    <div class="col-lg-5 px-4">
+                    <div class="col-lg-4">
                         <p class="subtitle-footer">
                             <span class="text-white fw-bold">Growstar Technology</span>
                         </p>
-                        <p class="text-white" id="description"><span class="text-orange">GrowStar Tech</span> merupakan platform untuk membantu anda dalam membuat website maupun desain produk</p>
+                        <p class="text-white" id="description">
+                            <span class="text-orange">GrowStar Tech</span>
+                            merupakan platform untuk membantu anda dalam membuat website maupun desain produk
+                        </p>
+                        <div class="group-icon-footer">
+                            <a class="icon-footer" href=""><i class="fab fa-instagram"></i></a>
+                            <a class="icon-footer ps-1" href=""><i class="fab fa-github"></i></a>
+                            <a class="icon-footer ps-1" href=""><i class="fab fa-dribbble"></i></a>
+                            <a class="icon-footer ps-1" href=""><i class="fab fa-tiktok"></i></a>
+                            <a class="icon-footer ps-1" href=""><i class="fab fa-linkedin"></i></a>
+                        </div>
                     </div>
-                    <div class="col col-sm-2 px-4">
-                        <li class="list-unstyled list-item-sosmed pb-1 fw-bold text-white">Tentang kami</li>
-                        <li class="list-unstyled"><a class="list-item-sosmed" href="index.html#layanan">Layanan</a></li>
-                        <li class="list-unstyled"><a class="list-item-sosmed" href="index.html#tentang">Tentang</a></li>
-                        <li class="list-unstyled"><a class="list-item-sosmed" href="index.html#project">Project</a></li>
-                        <li class="list-unstyled"><a class="list-item-sosmed" href="index.html#tim">Tim</a></li>
-                        <li class="list-unstyled"><a class="list-item-sosmed" href="index.html#blog">Blog</a></li>
+                    <div class="col col-sm-2">
+                        <li class="list-unstyled list-item-sosmed pb-1 fw-bold text-white">TENTANG KAMI</li>
+                        <li class="list-unstyled">
+                            <i class="fa fa-chevron-right icon-list-footer"></i>
+                            <a class="list-item-sosmed" href="index.html#layanan">Layanan</a>
+                        </li>
+                        <li class="list-unstyled">
+                            <i class="fa fa-chevron-right icon-list-footer"></i>
+                            <a class="list-item-sosmed" href="index.html#tentang">Tentang</a>
+                        </li>
+                        <li class="list-unstyled">
+                            <i class="fa fa-chevron-right icon-list-footer"></i>
+                            <a class="list-item-sosmed" href="index.html#project">Project</a>
+                        </li>
+                        <li class="list-unstyled">
+                            <i class="fa fa-chevron-right icon-list-footer"></i>
+                            <a class="list-item-sosmed" href="index.html#tim">Tim</a>
+                        </li>
+                        <li class="list-unstyled">
+                            <i class="fa fa-chevron-right icon-list-footer"></i>
+                            <a class="list-item-sosmed" href="index.html#blog">Blog</a>
+                        </li>
                     </div>
-                    <div class="col col-sm-2 px-4">
-                        <li class="list-unstyled list-item-sosmed pb-1 fw-bold text-white">Ikuti kami</li>
-                        <li class="list-unstyled"><a class="list-item-sosmed" href="#">Instagram</a></li>
-                        <li class="list-unstyled"><a class="list-item-sosmed" href="#">Github</a></li>
-                        <li class="list-unstyled"><a class="list-item-sosmed" href="#">Dribbble</a></li>
-                        <li class="list-unstyled"><a class="list-item-sosmed" href="#">Tiktok</a></li>
-                        <li class="list-unstyled"><a class="list-item-sosmed" href="#">LinkedIn</a></li>
+                    <div class="col col-sm-2">
+                        <li class="list-unstyled list-item-sosmed pb-1 fw-bold text-white">LAYANAN KAMI</li>
+                        <li class="list-unstyled">
+                            <i class="fa fa-chevron-right icon-list-footer"></i>
+                            <a class="list-item-sosmed">UI / UX</a>
+                        </li>
+                        <li class="list-unstyled">
+                            <i class="fa fa-chevron-right icon-list-footer"></i>
+                            <a class="list-item-sosmed">Desain</a>
+                        </li>
+                        <li class="list-unstyled">
+                            <i class="fa fa-chevron-right icon-list-footer"></i>
+                            <a class="list-item-sosmed">Web</a>
+                        </li>
+                        <li class="list-unstyled">
+                            <i class="fa fa-chevron-right icon-list-footer"></i>
+                            <a class="list-item-sosmed">Apps</a>
+                        </li>
+                        <!-- <li class="list-unstyled"><a class="list-item-sosmed" href="#">LinkedIn</a></li> -->
+                    </div>
+                    <div class="col col-sm-2">
+                        <li class="list-unstyled list-item-sosmed pb-1 fw-bold text-white">KONTAK KAMI</li>
+                        <li class="list-unstyled">
+                            <i class="fa fa-location-arrow icon-list-footer"></i>
+                            <a class="list-item-sosmed contact">Bogor, Indonesia</a>
+                        </li>
+                        <li class="list-unstyled">
+                            <i class="fa fa-phone icon-list-footer"></i>
+                            <a class="list-item-sosmed contact">+62 8985532500</a>
+                        </li>
                     </div>
                     <div class="lg-12">
-                        <p class="list-item-sosmed text-center pt-3">&copy; GrowStar Technology</p>
+                        <p class="list-item-sosmed text-copyright text-center pt-3">&copy; GrowStar Technology</p>
                     </div>
                 </div>
             </div>
@@ -493,6 +541,8 @@
 
         <!-- Scroll Animation -->
         <script src="assets/js/scrollreveal.min.js"></script>
+        <!-- <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script> -->
+
         <script src="assets/js/main.js"></script>
 
         <!-- Font awesome -->
