--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
                             <div class="card">
                                 <div class="card-body" id="card-services">
                                     <center>
-                                        <img class="img-fluid pt-3 px-3 rounded-3" id="img-project" src="assets/images/project/shoes-app-dribbble.png" />
-                                        <h5 class="card-title title-item-project pt-3 px-3">Shoes App Design</h5>
+                                        <img class="img-fluid pt-3 px-3 rounded-3" id="img-project" src="assets/images/project/iotrend.png" />
+                                        <h5 class="card-title title-item-project pt-3 px-3">IoTrend</h5>
                                     </center>
                                 </div>
                             </div>
@@ -164,8 +164,8 @@
                             <div class="card">
                                 <div class="card-body" id="card-services">
                                     <center>
-                                        <img class="img-fluid pt-3 px-3 rounded-3" id="img-project" src="assets/images/project/project1.jpeg" />
-                                        <h5 class="card-title title-item-project pt-3 px-3">OnBoarding Screens E-Commerce</h5>
+                                        <img class="img-fluid pt-3 px-3 rounded-3" id="img-project" src="assets/images/project/shoes-app-dribbble.png" />
+                                        <h5 class="card-title title-item-project pt-3 px-3">Shoes App Design</h5>
                                     </center>
                                 </div>
                             </div>
