--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <!-- Landing Page -->
             <section id="landing-page">
                 <div class="col-xxl-8 px-1">
-                    <div class="row flex-lg-row-reverse flex-md-row-reverse align-items-center g-5 px-md-3">
+                    <div class="row flex-lg-row-reverse flex-md-row-reverse align-items-center px-md-3">
                         <div class="col-lg-6 col-md-6 text-center mt-0">
                             <img src="assets/images/image-header-cropped.png" class="img-fluid" id="" />
                         </div>
@@ -84,7 +84,7 @@
             <section id="services">
                 <div class="row">
                     <center>
-                        <h1 class="title-services">Layanan Kami</h1>
+                        <h1 class="title-services">Services</h1>
                         <p class="subtitle-services mt-4">Kami menyediakan aspek Layanan IT profesional</p>
                     </center>
                     <div class="col-md-4 mt-3">
@@ -138,7 +138,7 @@
             <!-- Project -->
             <section id="project">
                 <div class="container">
-                    <center><h1 class="title-services">Projek</h1></center>
+                    <center><h1 class="title-services">Project</h1></center>
                     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2">
                         <div class="col-lg-6 mt-4">
                             <div class="card">
@@ -191,7 +191,7 @@
             <!-- Tim -->
             <section id="team">
                 <center>
-                    <h1 class="title-services mb-4">Tim</h1>
+                    <h1 class="title-services mb-4">Our Team</h1>
                 </center>
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-3 g-4">
                     <div class="col-12 col-sm-6 col-md-4 col-lg-4">
@@ -359,7 +359,7 @@
             <!-- Testimoni -->
             <section id="testimoni">
                 <center>
-                    <h1 class="title-services" id="title-testimoni">Testimoni</h1>
+                    <h1 class="title-services" id="title-testimoni">Testimony</h1>
                 </center>
                 <div class="container-lg">
                     <div class="row">
@@ -369,7 +369,6 @@
                                     <button id="control-bottom-active" type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                                     <button id="control-bottom" type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
                                     <button id="control-bottom" type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                                    <button id="control-bottom" type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
                                 </div>
                                 <center>
                                     <div class="carousel-inner">
@@ -382,7 +381,7 @@
                                                             <td><img class="profile-testi" src="assets/images/tim/svg/1.svg" /></td>
                                                             <td class="blankspace"></td>
                                                             <td>
-                                                                <h2 class="client-name">Nama Orang</h2>
+                                                                <h2 class="client-name">Johannes</h2>
                                                                 <h5 class="profesi-testi">Musician</h5>
                                                             </td>
                                                         </tr>
@@ -403,8 +402,8 @@
                                                             <td><img class="profile-testi" src="assets/images/tim/svg/1.svg" /></td>
                                                             <td class="blankspace"></td>
                                                             <td>
-                                                                <h2 class="client-name">Nama Orang</h2>
-                                                                <h5 class="profesi-testi">Musician</h5>
+                                                                <h2 class="client-name">Alex</h2>
+                                                                <h5 class="profesi-testi">Businessman</h5>
                                                             </td>
                                                         </tr>
                                                     </table>
@@ -424,29 +423,8 @@
                                                             <td><img class="profile-testi" src="assets/images/tim/svg/1.svg" /></td>
                                                             <td class="blankspace"></td>
                                                             <td>
-                                                                <h2 class="client-name">Nama Orang</h2>
-                                                                <h5 class="profesi-testi">Musician</h5>
-                                                            </td>
-                                                        </tr>
-                                                    </table>
-                                                    <p class="pt-3">
-                                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates fuga, provident labore distinctio illo eveniet adipisci, expedita ad possimus fugiat quos placeat doloremque aut
-                                                        alias, nihil facere voluptatum porro minus.
-                                                    </p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="carousel-item" data-bs-interval="false">
-                                            <div class="card-testi">
-                                                <img class="testi-kutip" src="assets/images/kutip.png" />
-                                                <div class="testi-content">
-                                                    <table>
-                                                        <tr>
-                                                            <td><img class="profile-testi" src="assets/images/tim/svg/1.svg" /></td>
-                                                            <td class="blankspace"></td>
-                                                            <td>
-                                                                <h2 class="client-name">Nama Orang</h2>
-                                                                <h5 class="profesi-testi">Musician</h5>
+                                                                <h2 class="client-name">Clara</h2>
+                                                                <h5 class="profesi-testi">Student</h5>
                                                             </td>
                                                         </tr>
                                                     </table>
